fix code analyze issues and inspections